v2.1 overflow-x fix

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -40,7 +40,7 @@
     }
 
     #after-curve {
-        width: 100vw;
+        width: 100%;
         height: 2.5em;
         background-color: #fff;
         float: inline-end;
