--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -46,7 +46,7 @@
     }
 
     #after-curve {
-        width: 100vw;
+        width: 100%;
         height: 2.5em;
         background-color: #fff;
         float: inline-end;
